src/dts/tests/modules2/modules2.exp
Error: modules2.js:6
  6: var m : string = z;
                      ^ number. This type is incompatible with
  6: var m : string = z;
             ^^^^^^ string


Found 1 error
